--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
                  <div class="container mx-auto px-6 h-full flex flex-col">
                     <div class="text-center w-full"><h2 class="section-title">Evidencia del Proceso</h2><p class="section-subtitle mt-4">Un recorrido visual por el trabajo de relevamiento, reconstrucción y cableado del tablero de control.</p></div>
                     <div class="card grid grid-cols-2 md:grid-cols-4 gap-4 mt-12 flex-grow">
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Máquina Original</h4><img src="https://imgur.com/gallery/proyectos-ECUTDHn#98YUTmB" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Tablero de Control</h4><img src="https://imgur.com/gallery/proyectos-ECUTDHn#5hIyyRQ" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Resistencias</h4><img src="https://imgur.com/gallery/proyectos-ECUTDHn#fCeN3Aa" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Componentes Neumáticos</h4><img src="https://imgur.com/gallery/proyectos-ECUTDHn#0Gwn1HM" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Máquina Original</h4><img src="https://postimg.cc/2LWptjMf" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Tablero de Control</h4><img src="https://postimg.cc/5YTdpQ74" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Resistencias</h4><img src="https://postimg.cc/YLFcP2Zh" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Componentes Neumáticos</h4><img src="https://postimg.cc/r03XgRnw" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
                     </div>
                 </div>
             </section>
@@ -290,7 +290,7 @@
                                 <li class="flex items-start gap-3"><i class="fas fa-robot text-blue-500 mt-1"></i><span>Desarrollar un sistema de control con PLC para automatizar la secuencia completa, optimizando tiempos y asegurando repetitibilidad.</span></li>
                             </ul>
                         </div>
-                        <img src="https://imgur.com/gallery/proyectos-ECUTDHn#nX5st3k" class="rounded-lg shadow-md w-full h-80 object-cover clickable-image">
+                        <img src="https://postimg.cc/vxnRK8kD" class="rounded-lg shadow-md w-full h-80 object-cover clickable-image">
                     </div>
                 </div>
             </section>
@@ -398,10 +398,10 @@
                 <div class="container mx-auto px-6 h-full flex flex-col">
                     <div class="text-center w-full"><h2 class="section-title">Evidencia del Proceso</h2><p class="section-subtitle mt-4">Imágenes del ensamblaje de la cinta transportadora y los componentes mecánicos.</p></div>
                     <div class="card grid grid-cols-2 md:grid-cols-3 gap-4 mt-12 flex-grow">
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Montaje de Cinta</h4><img src="https://imgur.com/gallery/proyectos-ECUTDHn#4nHvOZU" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Trabajo en Equipo</h4><img src="https://imgur.com/gallery/proyectos-ECUTDHn#AB97DHW" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Ajuste de Mecanismos</h4><img src="https://imgur.com/gallery/proyectos-ECUTDHn#PnLdlmJ" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col col-span-2 md:col-span-3"><h4 class="font-semibold text-center mb-2 text-sm">Vista General</h4><img src="https://imgur.com/gallery/proyectos-ECUTDHn#yIueyP1" class="w-full flex-grow h-64 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Montaje de Cinta</h4><img src="https://postimg.cc/SY90PQ3X" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Trabajo en Equipo</h4><img src="https://postimg.cc/0MFRZKWq" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Ajuste de Mecanismos</h4><img src="https://postimg.cc/MMN2tfPG" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col col-span-2 md:col-span-3"><h4 class="font-semibold text-center mb-2 text-sm">Vista General</h4><img src="https://streamable.com/kwwilr" class="w-full flex-grow h-64 object-cover rounded-lg shadow-md clickable-image"></figure>
                     </div>
                 </div>
             </section>
