--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
                  <div class="container mx-auto px-6 h-full flex flex-col">
                     <div class="text-center w-full"><h2 class="section-title">Evidencia del Proceso</h2><p class="section-subtitle mt-4">Un recorrido visual por el trabajo de relevamiento, reconstrucción y cableado del tablero de control.</p></div>
                     <div class="card grid grid-cols-2 md:grid-cols-4 gap-4 mt-12 flex-grow">
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Máquina Original</h4><img src="https://i.postimg.cc/2LWptjMf/IMG-20250917-WA0026-1.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Tablero de Control</h4><img src="https://i.postimg.cc/5YTdpQ74/IMG-20251001-WA0029.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Resistencias</h4><img src="https://i.postimg.cc/YLFcP2Zh/IMG-20251015-WA0030.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Componentes Neumáticos</h4><img src="https://i.postimg.cc/r03XgRnw/IMG-20250828-WA0021.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Máquina Original</h4><img src="https://i.postimg.cc/fy2wJJvk/IMG-20250917-WA0026-1.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Tablero de Control</h4><img src="hhttps://i.postimg.cc/tJCqqhFx/IMG-20251001-WA0029.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Resistencias</h4><img src="https://i.postimg.cc/KjqZRR5r/IMG-20251015-WA0030.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Componentes Neumáticos</h4><img src="https://i.postimg.cc/yxY11F00/IMG-20250901-WA0279.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
                     </div>
                 </div>
             </section>
@@ -397,9 +397,9 @@
                 <div class="container mx-auto px-6 h-full flex flex-col">
                     <div class="text-center w-full"><h2 class="section-title">Evidencia del Proceso</h2><p class="section-subtitle mt-4">Imágenes del ensamblaje de la cinta transportadora y los componentes mecánicos.</p></div>
                     <div class="card grid grid-cols-2 md:grid-cols-3 gap-4 mt-12 flex-grow">
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Montaje de Cinta</h4><img src="https://i.postimg.cc/SY90PQ3X/IMG-20251015-WA0029.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Trabajo en Equipo</h4><img src="https://i.postimg.cc/0MFRZKWq/IMG-20251015-WA0025.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Ajuste de Mecanismos</h4><img src="https://i.postimg.cc/MMN2tfPG/IMG-20250901-WA0279.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Montaje de Cinta</h4><img src="https://i.postimg.cc/sx6VvvJJ/IMG-20251015-WA0029.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Trabajo en Equipo</h4><img src="https://i.postimg.cc/3NJ88g2W/IMG-20251015-WA0025.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Ajuste de Mecanismos</h4><img src="https://i.postimg.cc/yxY11F00/IMG-20250901-WA0279.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
                         <figure class="flex flex-col col-span-2 md:col-span-3">
                             <h4 class="font-semibold text-center mb-2 text-sm">Vista General (Video)</h4>
                             <iframe 
