--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <div class="text-center w-full"><h2 class="section-title">Evidencia del Proceso</h2><p class="section-subtitle mt-4">Un recorrido visual por el trabajo de relevamiento, reconstrucción y cableado del tablero de control.</p></div>
                     <div class="card grid grid-cols-2 md:grid-cols-4 gap-4 mt-12 flex-grow">
                         <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Máquina Original</h4><img src="https://i.postimg.cc/fy2wJJvk/IMG-20250917-WA0026-1.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
-                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Tablero de Control</h4><img src="hhttps://i.postimg.cc/tJCqqhFx/IMG-20251001-WA0029.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
+                        <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Tablero de Control</h4><img src="https://i.postimg.cc/2y8kk4nh/IMG-20250828-WA0021.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
                         <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Resistencias</h4><img src="https://i.postimg.cc/KjqZRR5r/IMG-20251015-WA0030.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
                         <figure class="flex flex-col"><h4 class="font-semibold text-center mb-2 text-sm">Componentes Neumáticos</h4><img src="https://i.postimg.cc/yxY11F00/IMG-20250901-WA0279.jpg" class="w-full flex-grow h-48 object-cover rounded-lg shadow-md clickable-image"></figure>
                     </div>
@@ -289,7 +289,7 @@
                                 <li class="flex items-start gap-3"><i class="fas fa-robot text-blue-500 mt-1"></i><span>Desarrollar un sistema de control con PLC para automatizar la secuencia completa, optimizando tiempos y asegurando repetitibilidad.</span></li>
                             </ul>
                         </div>
-                        <img src="https://i.postimg.cc/vxnRK8kD/IMG-20250823-WA0086.jpg" class="rounded-lg shadow-md w-full h-80 object-cover clickable-image">
+                        <img src="https://i.postimg.cc/BbYqXXC5/IMG-20250823-WA0086.jpg" class="rounded-lg shadow-md w-full h-80 object-cover clickable-image">
                     </div>
                 </div>
             </section>
